// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<A11yGroup>
  <TouchableHighlight
    accessibilityLabel="Learn React Native"
    accessibilityTraits="button"
    onLayout={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "height": 160,
        },
        Object {},
        Object {
          "height": 100,
        },
      ]
    }
    testID="course-1"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F5F5F5",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flex": 1,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#333",
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "bottom": 0,
              "left": 0,
              "opacity": 0.8,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        accessible={false}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
                "marginTop": 8,
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={false}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 12,
                "fontWeight": "600",
                "marginTop": 2,
              },
            ]
          }
        >
          rn 101
        </Text>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Open Learn React Native user preferences"
    accessibilityTraits="button"
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "height": 43,
        "position": "absolute",
        "right": 8,
        "top": 8,
        "width": 43,
      }
    }
    testID="course-card.kabob-1"
    underlayColor="#ffffff00"
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 15,
          "padding": 4,
          "position": "absolute",
          "right": 4,
          "top": 6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "moreLine",
          }
        }
        style={
          Object {
            "height": 18,
            "tintColor": "#FFFFFF",
            "width": 18,
          }
        }
      />
    </View>
  </TouchableHighlight>
</A11yGroup>
`;

exports[`renders with a grade 1`] = `
<A11yGroup>
  <TouchableHighlight
    accessibilityLabel="Learn React Native A-"
    accessibilityTraits="button"
    onLayout={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "height": 160,
        },
        Object {},
        Object {
          "height": 100,
        },
      ]
    }
    testID="course-1"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F5F5F5",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flex": 1,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#333",
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "bottom": 0,
              "left": 0,
              "opacity": 0.8,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 14,
              "flex": 1,
              "left": 8,
              "maxWidth": 120,
              "paddingLeft": 6,
              "paddingRight": 6,
              "position": "absolute",
              "top": 8,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "color": "#333",
                  },
                ],
              ]
            }
          >
            A-
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
                "marginTop": 8,
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={false}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 12,
                "fontWeight": "600",
                "marginTop": 2,
              },
            ]
          }
        >
          rn 101
        </Text>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Open Learn React Native user preferences"
    accessibilityTraits="button"
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "height": 43,
        "position": "absolute",
        "right": 8,
        "top": 8,
        "width": 43,
      }
    }
    testID="course-card.kabob-1"
    underlayColor="#ffffff00"
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 15,
          "padding": 4,
          "position": "absolute",
          "right": 4,
          "top": 6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "moreLine",
          }
        }
        style={
          Object {
            "height": 18,
            "tintColor": "#FFFFFF",
            "width": 18,
          }
        }
      />
    </View>
  </TouchableHighlight>
</A11yGroup>
`;

exports[`renders with a grade even if the grade does not exist 1`] = `
<A11yGroup>
  <TouchableHighlight
    accessibilityLabel="Learn React Native N/A"
    accessibilityTraits="button"
    onLayout={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "height": 160,
        },
        Object {},
        Object {
          "height": 100,
        },
      ]
    }
    testID="course-1"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F5F5F5",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flex": 1,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#333",
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "bottom": 0,
              "left": 0,
              "opacity": 0.8,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 14,
              "flex": 1,
              "left": 8,
              "maxWidth": 120,
              "paddingLeft": 6,
              "paddingRight": 6,
              "position": "absolute",
              "top": 8,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "color": "#333",
                  },
                ],
              ]
            }
          >
            N/A
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
                "marginTop": 8,
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={false}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 12,
                "fontWeight": "600",
                "marginTop": 2,
              },
            ]
          }
        >
          rn 101
        </Text>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Open Learn React Native user preferences"
    accessibilityTraits="button"
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "height": 43,
        "position": "absolute",
        "right": 8,
        "top": 8,
        "width": 43,
      }
    }
    testID="course-card.kabob-1"
    underlayColor="#ffffff00"
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 15,
          "padding": 4,
          "position": "absolute",
          "right": 4,
          "top": 6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "moreLine",
          }
        }
        style={
          Object {
            "height": 18,
            "tintColor": "#FFFFFF",
            "width": 18,
          }
        }
      />
    </View>
  </TouchableHighlight>
</A11yGroup>
`;

exports[`renders with empty image url 1`] = `
<A11yGroup>
  <TouchableHighlight
    accessibilityLabel="Learn React Native"
    accessibilityTraits="button"
    onLayout={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "height": 160,
        },
        Object {},
        Object {
          "height": 100,
        },
      ]
    }
    testID="course-1"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F5F5F5",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flex": 1,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#333",
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        accessible={false}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
                "marginTop": 8,
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={false}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 12,
                "fontWeight": "600",
                "marginTop": 2,
              },
            ]
          }
        >
          rn 101
        </Text>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Open Learn React Native user preferences"
    accessibilityTraits="button"
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "height": 43,
        "position": "absolute",
        "right": 8,
        "top": 8,
        "width": 43,
      }
    }
    testID="course-card.kabob-1"
    underlayColor="#ffffff00"
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 15,
          "padding": 4,
          "position": "absolute",
          "right": 4,
          "top": 6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "moreLine",
          }
        }
        style={
          Object {
            "height": 18,
            "tintColor": "#FFFFFF",
            "width": 18,
          }
        }
      />
    </View>
  </TouchableHighlight>
</A11yGroup>
`;

exports[`renders with image url 1`] = `
<A11yGroup>
  <TouchableHighlight
    accessibilityLabel="Learn React Native"
    accessibilityTraits="button"
    onLayout={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "height": 160,
        },
        Object {},
        Object {
          "height": 100,
        },
      ]
    }
    testID="course-1"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F5F5F5",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flex": 1,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "http://www.fillmurray.com/100/100",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#333",
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "bottom": 0,
              "left": 0,
              "opacity": 0.8,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        accessible={false}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
                "marginTop": 8,
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={false}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 12,
                "fontWeight": "600",
                "marginTop": 2,
              },
            ]
          }
        >
          rn 101
        </Text>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Open Learn React Native user preferences"
    accessibilityTraits="button"
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "height": 43,
        "position": "absolute",
        "right": 8,
        "top": 8,
        "width": 43,
      }
    }
    testID="course-card.kabob-1"
    underlayColor="#ffffff00"
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 15,
          "padding": 4,
          "position": "absolute",
          "right": 4,
          "top": 6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "moreLine",
          }
        }
        style={
          Object {
            "height": 18,
            "tintColor": "#FFFFFF",
            "width": 18,
          }
        }
      />
    </View>
  </TouchableHighlight>
</A11yGroup>
`;

exports[`renders without image url 1`] = `
<A11yGroup>
  <TouchableHighlight
    accessibilityLabel="Learn React Native"
    accessibilityTraits="button"
    onLayout={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "height": 160,
        },
        Object {},
        Object {
          "height": 100,
        },
      ]
    }
    testID="course-1"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F5F5F5",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flex": 1,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#333",
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        accessible={false}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
                "marginTop": 8,
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={false}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 12,
                "fontWeight": "600",
                "marginTop": 2,
              },
            ]
          }
        >
          rn 101
        </Text>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Open Learn React Native user preferences"
    accessibilityTraits="button"
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "height": 43,
        "position": "absolute",
        "right": 8,
        "top": 8,
        "width": 43,
      }
    }
    testID="course-card.kabob-1"
    underlayColor="#ffffff00"
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 15,
          "padding": 4,
          "position": "absolute",
          "right": 4,
          "top": 6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "moreLine",
          }
        }
        style={
          Object {
            "height": 18,
            "tintColor": "#FFFFFF",
            "width": 18,
          }
        }
      />
    </View>
  </TouchableHighlight>
</A11yGroup>
`;

exports[`renders without the color overlay 1`] = `
<A11yGroup>
  <TouchableHighlight
    accessibilityLabel="Learn React Native"
    accessibilityTraits="button"
    onLayout={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "height": 160,
        },
        Object {},
        Object {
          "height": 100,
        },
      ]
    }
    testID="course-1"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#F5F5F5",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flex": 1,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": undefined,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        accessible={false}
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          accessible={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "600",
                "marginTop": 8,
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={false}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 12,
                "fontWeight": "600",
                "marginTop": 2,
              },
            ]
          }
        >
          rn 101
        </Text>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Open Learn React Native user preferences"
    accessibilityTraits="button"
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "height": 43,
        "position": "absolute",
        "right": 8,
        "top": 8,
        "width": 43,
      }
    }
    testID="course-card.kabob-1"
    underlayColor="#ffffff00"
  >
    <View
      style={
        Object {
          "backgroundColor": "#333",
          "borderRadius": 15,
          "padding": 4,
          "position": "absolute",
          "right": 4,
          "top": 6,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "moreLine",
          }
        }
        style={
          Object {
            "height": 18,
            "tintColor": "#FFFFFF",
            "width": 18,
          }
        }
      />
    </View>
  </TouchableHighlight>
</A11yGroup>
`;
